fix: Mis-alignment between anatomogram and the heatmap in Reactome Pathway portal

--- a/web/src/main/webapp/resources/css/heatmap-and-anatomogram.css
+++ b/web/src/main/webapp/resources/css/heatmap-and-anatomogram.css
@@ -22,7 +22,7 @@
 }
 
 .heatmap-position {
-    position: relative;
+    position: fixed;
     margin-left: 270px;
 }
 
